gcc/testsuite/g++.dg/coroutines/co-yield-syntax-01-outside-fn.C
//  { dg-additional-options "-fsyntax-only -w" }

#include "coro.h"

auto f (int x = co_yield 5); // { dg-error {'co_yield' cannot be used outside a function} }

